[gd_scene load_steps=18 format=3 uid="uid://cjf012xbk6rdn"]

[ext_resource type="Script" path="res://GameScene.gd" id="1_1tj7h"]
[ext_resource type="Script" path="res://GameCamera.gd" id="1_u3pif"]
[ext_resource type="Script" path="res://UI_Builder.gd" id="2_5ttem"]
[ext_resource type="Shader" uid="uid://b4phmp8ng8ufo" path="res://Terrain_Shader.tres" id="4_jr47f"]
[ext_resource type="Script" path="res://NavMesh_Builder.gd" id="4_kvh8x"]
[ext_resource type="Script" path="res://Player.gd" id="4_sboxr"]
[ext_resource type="Texture2D" uid="uid://drbfk3h3s6x1b" path="res://Test_Items/HeightMap.exr" id="5_hv0wo"]
[ext_resource type="Texture2D" uid="uid://cs6n027ca4h1y" path="res://Test_Items/GrassyField1.png" id="5_ld5fb"]
[ext_resource type="Texture2D" uid="uid://bxnba2n264pgx" path="res://Test_Items/HeightMap_Normal.png" id="6_dmutg"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_46wwo"]

[sub_resource type="Sky" id="Sky_aswfs"]
sky_material = SubResource("ProceduralSkyMaterial_46wwo")

[sub_resource type="Environment" id="Environment_0xqwl"]
background_mode = 2
background_energy_multiplier = 2.7
sky = SubResource("Sky_aswfs")
ambient_light_color = Color(0.364706, 0.623529, 0.803922, 1)
ambient_light_energy = 5.44
reflected_light_source = 2
tonemap_mode = 3
tonemap_exposure = 1.06
tonemap_white = 6.0
ssr_enabled = true
ssao_enabled = true
ssao_intensity = 11.77
ssao_power = 5.4075
ssao_detail = 2.0
ssao_light_affect = 0.78
ssil_radius = 8.03
ssil_intensity = 0.08
ssil_sharpness = 0.0
fog_sun_scatter = 0.41
fog_sky_affect = 0.842
volumetric_fog_anisotropy = 0.9
volumetric_fog_length = 64.15
adjustment_enabled = true
adjustment_contrast = 1.2
adjustment_saturation = 1.2

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_d3i0u"]
dof_blur_far_distance = 1000.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_onle8"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_fbdp7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k2vpc"]
render_priority = 0
shader = ExtResource("4_jr47f")
shader_parameter/uvx = 4.75e-06
shader_parameter/uvy = null
shader_parameter/t_height = 36
shader_parameter/uvx2 = null
shader_parameter/uvy2 = null
shader_parameter/u_terrain_normal_basis = Basis(1, 0, 0, 0, 0.643, 0, 0, 0, 1)
shader_parameter/heightmap = ExtResource("5_hv0wo")
shader_parameter/terrain_normal_map = ExtResource("6_dmutg")
shader_parameter/Albedo = ExtResource("5_ld5fb")
shader_parameter/terrain_normal_map2 = ExtResource("6_dmutg")

[sub_resource type="PlaneMesh" id="PlaneMesh_ssgws"]
size = Vector2(1000, 1000)
subdivide_width = 1500
subdivide_depth = 1500

[node name="GameScene" type="Node3D"]
script = ExtResource("1_1tj7h")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0xqwl")
camera_attributes = SubResource("CameraAttributesPractical_d3i0u")

[node name="UI_Node" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_5ttem")

[node name="Viewport_Sectons" type="Panel" parent="UI_Node"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="LeftBar" type="Panel" parent="UI_Node/Viewport_Sectons"]
use_parent_material = true
layout_mode = 1
anchors_preset = -1
anchor_right = 0.05
anchor_bottom = 1.0
grow_vertical = 2

[node name="RightBar" type="Panel" parent="UI_Node/Viewport_Sectons"]
use_parent_material = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.95
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 2

[node name="TopBar" type="Panel" parent="UI_Node/Viewport_Sectons"]
use_parent_material = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.05
grow_vertical = 2

[node name="BottomBar" type="Panel" parent="UI_Node/Viewport_Sectons"]
use_parent_material = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.95
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 2

[node name="Time_Bar" type="Panel" parent="UI_Node"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.7
anchor_right = 1.0
anchor_bottom = 0.05
grow_horizontal = 0

[node name="Date" type="RichTextLabel" parent="UI_Node/Time_Bar"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 5.0

[node name="Build_Button" type="Button" parent="UI_Node/Time_Bar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.018
anchor_top = 1.0
anchor_right = 0.148
anchor_bottom = 2.444
offset_left = 0.0880003
offset_top = 1.0
offset_right = 0.167999
offset_bottom = -0.984001
toggle_mode = true
keep_pressed_outside = true
text = "Build"

[node name="Units_Button" type="Button" parent="UI_Node/Time_Bar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.018
anchor_top = 1.0
anchor_right = 0.148
anchor_bottom = 2.444
offset_left = 52.088
offset_top = 1.0
offset_right = -2.192
offset_bottom = -0.984001
keep_pressed_outside = true
text = "Units"

[node name="Day_Cycle_Timer" type="Timer" parent="UI_Node/Time_Bar"]
wait_time = 0.5
autostart = true

[node name="Time_Bar2" type="Panel" parent="UI_Node"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.3
anchor_bottom = 0.075
grow_horizontal = 0

[node name="Wood" type="RichTextLabel" parent="UI_Node/Time_Bar2"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -2.0
offset_right = -335.0
offset_bottom = -7.0
text = "Wood
"

[node name="Amount" type="RichTextLabel" parent="UI_Node/Time_Bar2/Wood"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.4
anchor_right = 1.0
anchor_bottom = 0.46
offset_bottom = 39.6
text = "
"
fit_content = true

[node name="Stone" type="RichTextLabel" parent="UI_Node/Time_Bar2"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 57.0
offset_top = -2.0
offset_right = -281.0
offset_bottom = -7.0
text = "Stone

"

[node name="Amount" type="RichTextLabel" parent="UI_Node/Time_Bar2/Stone"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.4
anchor_right = 1.0
anchor_bottom = 0.46
offset_bottom = 39.6
fit_content = true

[node name="Riches" type="RichTextLabel" parent="UI_Node/Time_Bar2"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 107.0
offset_top = -2.0
offset_right = -223.0
offset_bottom = -7.0
text = "Riches"
autowrap_mode = 2

[node name="Amount" type="RichTextLabel" parent="UI_Node/Time_Bar2/Riches"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.4
anchor_right = 1.0
anchor_bottom = 0.46
offset_bottom = 39.6
fit_content = true

[node name="Crystal" type="RichTextLabel" parent="UI_Node/Time_Bar2"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 166.0
offset_top = -2.0
offset_right = -164.0
offset_bottom = -7.0
text = "Crystal"
autowrap_mode = 2

[node name="Amount" type="RichTextLabel" parent="UI_Node/Time_Bar2/Crystal"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.4
anchor_right = 1.0
anchor_bottom = 0.46
offset_bottom = 39.6
fit_content = true

[node name="Food" type="RichTextLabel" parent="UI_Node/Time_Bar2"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 226.0
offset_top = -2.0
offset_right = -104.0
offset_bottom = -7.0
text = "Food"
autowrap_mode = 2

[node name="Amount" type="RichTextLabel" parent="UI_Node/Time_Bar2/Food"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.4
anchor_right = 1.0
anchor_bottom = 0.46
offset_bottom = 39.6
fit_content = true

[node name="Pop" type="RichTextLabel" parent="UI_Node/Time_Bar2"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 295.0
offset_top = -2.0
offset_bottom = 0.999996
text = "Population"
autowrap_mode = 2

[node name="Amount" type="RichTextLabel" parent="UI_Node/Time_Bar2/Pop"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.4
anchor_right = 1.0
anchor_bottom = 0.46
offset_bottom = 39.6
fit_content = true

[node name="Minimap" type="Panel" parent="UI_Node"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.75
anchor_top = 0.681
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.320038

[node name="Snap" type="Button" parent="UI_Node/Minimap"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.06
anchor_bottom = 0.08
offset_right = 8.0
offset_bottom = 8.0
text = "None"

[node name="Build_Menu" type="Panel" parent="UI_Node"]
material = SubResource("CanvasItemMaterial_onle8")
layout_mode = 0
offset_left = 521.0
offset_top = 91.0
offset_right = 721.0
offset_bottom = 591.0

[node name="Building_Buttons" type="MenuButton" parent="UI_Node/Build_Menu"]
material = SubResource("CanvasItemMaterial_fbdp7")
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.12
text = "Buildings"
switch_on_hover = true

[node name="Barracks_Menu" type="Panel" parent="UI_Node"]
visible = false
layout_mode = 0
offset_left = 463.0
offset_top = 191.0
offset_right = 696.0
offset_bottom = 432.0

[node name="Unit_Test_Button" type="Button" parent="UI_Node/Barracks_Menu"]
layout_mode = 0
offset_left = 26.0
offset_top = 16.0
offset_right = 210.0
offset_bottom = 83.0
text = "Unit_Test"

[node name="World" type="Node3D" parent="."]
script = ExtResource("4_kvh8x")

[node name="Visual_Ground" type="MeshInstance3D" parent="World"]
material_override = SubResource("ShaderMaterial_k2vpc")
mesh = SubResource("PlaneMesh_ssgws")
skeleton = NodePath("")

[node name="Player" type="Node" parent="."]
script = ExtResource("4_sboxr")

[node name="Player_camera" type="Node3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 35.0752, 0)
script = ExtResource("1_u3pif")

[node name="Player_view" type="Camera3D" parent="Player/Player_camera"]
transform = Transform3D(1, 0, 0, 0, 0.573577, 0.819152, 0, -0.819152, 0.573577, 0, 15, 15)

[node name="RayCast3D" type="RayCast3D" parent="Player/Player_camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 15, 0)
target_position = Vector3(0, -500, 0)
hit_from_inside = true

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.933228, 0.250605, 0.257455, -0.354576, 0.526772, 0.77252, 0.057977, -0.812224, 0.580457, 0, 41.7719, 0)
light_angular_distance = 3.0
shadow_enabled = true
shadow_bias = 0.25
shadow_blur = 0.0
directional_shadow_blend_splits = true
directional_shadow_max_distance = 26.4
directional_shadow_pancake_size = 34.3

[connection signal="menu_opened" from="UI_Node" to="." method="_on_ui_node_menu_opened"]
[connection signal="mouse_entered" from="UI_Node/Viewport_Sectons/LeftBar" to="Player/Player_camera" method="_on_left_bar_mouse_entered"]
[connection signal="mouse_exited" from="UI_Node/Viewport_Sectons/LeftBar" to="Player/Player_camera" method="_on_left_bar_mouse_exited"]
[connection signal="mouse_entered" from="UI_Node/Viewport_Sectons/RightBar" to="Player/Player_camera" method="_on_right_bar_mouse_entered"]
[connection signal="mouse_exited" from="UI_Node/Viewport_Sectons/RightBar" to="Player/Player_camera" method="_on_right_bar_mouse_exited"]
[connection signal="mouse_entered" from="UI_Node/Viewport_Sectons/TopBar" to="Player/Player_camera" method="_on_top_bar_mouse_entered"]
[connection signal="mouse_exited" from="UI_Node/Viewport_Sectons/TopBar" to="Player/Player_camera" method="_on_top_bar_mouse_exited"]
[connection signal="mouse_entered" from="UI_Node/Viewport_Sectons/BottomBar" to="Player/Player_camera" method="_on_bottom_bar_mouse_entered"]
[connection signal="mouse_exited" from="UI_Node/Viewport_Sectons/BottomBar" to="Player/Player_camera" method="_on_bottom_bar_mouse_exited"]
[connection signal="pressed" from="UI_Node/Time_Bar/Build_Button" to="UI_Node" method="_on_build_button_pressed"]
[connection signal="pressed" from="UI_Node/Time_Bar/Units_Button" to="UI_Node" method="_on_units_button_pressed"]
[connection signal="timeout" from="UI_Node/Time_Bar/Day_Cycle_Timer" to="." method="_on_day_cycle_timer_timeout"]
[connection signal="timeout" from="UI_Node/Time_Bar/Day_Cycle_Timer" to="UI_Node" method="_on_timer_timeout"]
[connection signal="pressed" from="UI_Node/Minimap/Snap" to="UI_Node" method="_on_snap_pressed"]
[connection signal="pressed" from="UI_Node/Barracks_Menu/Unit_Test_Button" to="." method="_on_unit_test_button_pressed"]
